--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ice Breaker</title>
-        <link rel="stylesheet" href="icebreaker-CSS.css">
+        <link rel="stylesheet" href="icebreaker-css.css">
     </head>
     <body>
 
@@ -22,6 +22,7 @@
                     <option value="picante">Picante (+18)</option>
                     <option value="desafio">Desafio</option>
                     <option value="animado">Animado</option>
+                    <option value="sou">Como sou</option>
                 </select>
                 <p id="randomPhrase">O que é que?</p>
 
@@ -30,6 +31,6 @@
             <p id="instr">Selecione o tema e clique no botão para uma questão aleatória.</p>
         </div><!--FIM div container-->
 
-        <script src="icebreaker-JS.js"></script>
+        <script src="icebreaker-js.js"></script>
     </body>
 </html>
