--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                     <option value="desafio">Desafio</option>
                     <option value="animado">Animado</option>
                     <option value="sou">Como sou</option>
+                    <option value="completar">Complete a frase</option>
+                    <option value="hipotetico">Hipoteticamente</option>
+                    <option value="temas">Temas (polémico)</option>
+                    <option value="prefere">O que prefere</option>
+                    <option value="emprego">Emprego</option>
+                    <option value="nunca">Eu nunca</option>
+                    <option value="nuncapicante">Eu nunca (+18)</option>
                 </select>
                 <p id="randomPhrase">O que é que?</p>
 
