--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 id="titulo">IceBreaker</h1>
 
                 <div id="box1">
-                    <img id="boxazul" src="images/box1.png" alt="">
+                    <img id="boxazul" src="box1.png" alt="">
                     <div class="textointro">
                         <p id="intro">Partilhe e crie ligações impactantes.</p>
                         <p id="instr">Selecione o tema e clique no botão para uma questão aleatória.</p>
@@ -52,7 +52,7 @@
                     </div><!--FIM div boxbranca-->
 
                     <div id="box2">
-                        <img id="boxverde" src="images/box2-lin.png" alt="">
+                        <img id="boxverde" src="box2-lin.png" alt="">
                         <p id="randomPhrase">" O que é que? "</p>
                     </div><!--FIM div box2-->
 
