--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                 <div id="modalSobre" class="modal">
                     <div class="modal-content">
                         <span class="fechar" onclick="fecharModal()">&times;</span>
-                        <h2>Sobre esta página</h2>
-                        <p>Insira aqui as informações sobre a página.</p>
+                        <h2>Sobre IceBreaker</h2>
+                        <p>IceBreaker é um gerador de questões, para que possa partilhar e criar ligações impactantes, através de perguntas aleatórias e respostas inesperadas.</p>
+                        <p>Projeto pessoal, sem fins lucrativos. Questões criadas e recolhidas a partir do ChatGPT.</p>
+                        <br>
+                        <p> Template by <a href="https://joanafbastos-portfolio.carrd.co/ target="_blank">Joana F Bastos</a> | 2024</p> 
                     </div>
                 </div>
 
