--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <div id="modalSobre" class="modal">
                     <div class="modal-content">
                         <span class="fechar" onclick="fecharModal()">&times;</span>
-                        <h2>Sobre IceBreaker</h2>
-                        <p>IceBreaker é um gerador de questões para que possa partilhar e criar ligações impactantes, através de perguntas aleatórias e respostas inesperadas.</p>
-                        <p>Projeto pessoal, sem fins lucrativos. Questões criadas e recolhidas a partir do ChatGPT.</p>
+                        <h2>Sobre</h2>
+                        <p><b>IceBreaker</b> é um gerador de questões para que possa partilhar e criar ligações impactantes, através de perguntas aleatórias e respostas inesperadas.</p>
+                        <p><i>Projeto pessoal, sem fins lucrativos. Questões criadas e recolhidas a partir do ChatGPT.</i></p>
                         <br>
-                        <p> Template by <a href="https://joanafbastos-portfolio.carrd.co/ target="_blank">Joana F Bastos</a> | 2024</p> 
+                        <p>Template by <a href="https://joanafbastos-portfolio.carrd.co/ target="_blank">Joana F Bastos</a> | 2024</p> 
                     </div>
                 </div>
 
