--- a/index.html
+++ b/index.html
@@ -1,81 +1,122 @@
+<div id="linha"></div>
 <!DOCTYPE html>
 <html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Ice Breaker</title>
-        <link rel="stylesheet" href="icebreaker-css.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
-   
-    <body>
-        <div class="container"
-             <div class="boxes">
-                <h1 id="titulo">IceBreaker</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ice Breaker</title>
 
-                <div id="box1">
-                    <img id="boxazul" src="box1.png" alt="">
-                    <div class="textointro">
-                        <p id="intro">Partilhe e crie ligações impactantes.</p>
-                        <p id="instr">Selecione o tema e clique no botão para uma questão aleatória.</p>
-                    </div><!--FIM div textointro-->
-                </div><!--FIM div box1-->
+  <link rel="stylesheet" href="icebreaker-css.css">
 
-                <div id="box3">
-                    <div class="boxbranca">
-                        <div class="card">
-                            <!--<button>CATEGORIA</button>-->
-                            <select id="categorySelect">
-                                <option value="all">Geral</option>
-                                <option value="reflexao">Reflexão</option>
-                                <option value="conhecer">Conhecer</option>
-                                <option value="amizade">Amizade</option>
-                                <option value="romantico">Romântico</option>
-                                <option value="namoro">Namoro</option>
-                                <option value="picante">Picante (+18)</option>
-                                <option value="desafio">Desafio</option>
-                                <option value="animado">Animado</option>
-                                <option value="sou">Como sou</option>
-                                <option value="completar">Complete a frase</option>
-                                <option value="hipotetico">Hipoteticamente</option>
-                                <option value="temas">Temas (polémico)</option>
-                                <option value="prefere">O que prefere</option>
-                                <option value="emprego">Emprego</option>
-                                <option value="nunca">Eu nunca</option>
-                                <option value="nuncapicante">Eu nunca (+18)</option>
-                            </select>
-                            <hr></hr>
-                        </div><!--FIM div card-->
-                    </div><!--FIM div boxbranca-->
+  <!--Raleway-->
+  <link rel="preconnect" ref="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!--Sora-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
+  <!--Manrope-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <!--Playfair Display-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Noto+Sans+Sora+Sompeng:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
-                    <div id="box2">
-                        <img id="boxverde" src="box2-lin.png" alt="">
-                        <p id="randomPhrase">" O que é que? "</p>
-                    </div><!--FIM div box2-->
+</head>
 
-                    <!--<hr id="linha2"></hr>-->
-                    <button id="generateButton">GERAR QUESTÃO</button>
-                </div><!--FIM div box3-->
+<body>
+  <div class="container">
 
-                <span id="btnSobre" class="botaoTexto">SOBRE</span>
-                <!-- Modal de Sobre -->
-                <div id="modalSobre" class="modal">
-                    <div class="modal-content">
-                        <span class="fechar" onclick="fecharModal()">&times;</span>
-                        <h2>Sobre</h2>
-                        <p><b>IceBreaker</b> é um gerador de questões para que possa partilhar e criar ligações impactantes, através de perguntas aleatórias e respostas inesperadas.</p>
-                        <p><i>Projeto pessoal, sem fins lucrativos. Questões criadas e recolhidas a partir do ChatGPT.</i></p>
-                        <br>
-                        <p>Template by <a href="https://joanafbastos-portfolio.carrd.co/ target="_blank">Joana F Bastos</a> | 2024</p> 
-                    </div>
-                </div>
+    <div id="box0">
+      <!--* Questões *-->
+      <div id="box2">
+        <img id="boxquestao" src="box2-lin.png" alt="">
+        <!--imagem !!!-->
+        <p id="randomPhrase">" Vamos começar? "</p>
+      </div>
+      <!--FIM div box2-->
 
-            </div><!--FIM div boxes-->
-        </div><!--FIM div container-->
+      <div id="box4">
+        <!--* Botão *-->
+        <div id="b4b"><button id="generateButton">GERAR QUESTÃO</button></div>
 
-        <script src="icebreaker-js.js"></script>
-    </body>
+        <!--* Sobre *-->
+        <div id="b4s"><span id="btnSobre" class="botaoTexto">sobre</span></div>
+        <!-- Modal de Sobre -->
+        <div id="modalSobre" class="modal">
+          <div class="modal-content">
+            <span class="fechar" onclick="fecharModal()">&times;</span>
+            <h2>Sobre</h2>
+            <p><b>IceBreaker</b> é um gerador de questões para que possa partilhar e criar ligações impactantes, através de perguntas aleatórias e respostas inesperadas.</p>
+            <p><i>Projeto pessoal, sem fins lucrativos. Questões criadas e recolhidas a partir do ChatGPT.</i></p>
+            <br>
+            <p>Template by <a href="https://joanafbastos-portfolio.carrd.co/ target=" _blank">Joana F Bastos</a> | 2024</p>
+          </div>
+          <!--FIM div modal-content-->
+        </div>
+        <!--FIM div modalSobre-->
+      </div>
+      <!--FIM div box4-->
+    </div>
+    <!--FIM div box0-->
+
+    <div id="box1">
+      <!---* Titulo *-->
+      <div id="tituloback">
+        <h1 id="titulo">IceBreaker</h1>
+      </div>
+      <hr>
+      <!---* Intro *-->
+      <div class="textointro">
+        <p id="intro">Partilha e cria ligações impactantes</p>
+        <p id="instr">Para uma questão aleatória, seleciona o tema e clica no botão de gerar [*]</p>
+      </div>
+      <!--FIM div textointro-->
+    </div>
+    <!--FIM div box1-->
+
+    <div id="box3">
+      <!--* Linha *-->
+      <div class="contvertical">
+        <div id="linha"></div>
+      </div>
+      <!--FIM div contvertical-->
+
+      <!--* Categorias *-->
+      <div class="card">
+        <!--<button>CATEGORIA</button>-->
+        <select id="categorySelect">
+          <option value="all">Categoria: Geral</option>
+          <option value="reflexao">Reflexão</option>
+          <option value="conhecer">Conhecer</option>
+          <option value="amizade">Amizade</option>
+          <option value="romantico">Romântico</option>
+          <option value="namoro">Namoro</option>
+          <option value="picante">Picante (+18)</option>
+          <option value="desafio">Desafio</option>
+          <option value="animado">Animado</option>
+          <option value="sou">Como sou...</option>
+          <option value="completar">Completa a frase</option>
+          <option value="hipotetico">Hipoteticamente</option>
+          <option value="temas">Temas (polémico)</option>
+          <option value="prefere">O que preferes...</option>
+          <!--<option value="emprego">Emprego</option>-->
+          <option value="nunca">Eu nunca</option>
+          <option value="nuncapicante">Eu nunca (+18)</option>
+        </select>
+      </div>
+      <!--FIM div card-->
+    </div>
+    <!--FIM div box3-->
+
+  </div>
+  <!--FIM div container-->
+
+  <script src="icebreaker-js.js"></script>
+</body>
+
 </html>
