--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           <option value="picante">Picante (+18)</option>
           <option value="desafio">Desafio</option>
           <option value="animado">Animado</option>
+          <option value="aprofundar">Aprofundar</option>
           <option value="sou">Como sou...</option>
           <option value="completar">Completa a frase</option>
           <option value="hipotetico">Hipoteticamente</option>
